Code overflow fix

--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -36,6 +36,7 @@ code.language-plaintext {
 
 pre.highlight {
     position: relative;
+    overflow-x: hidden;
 }
 
 .copy-button {
